# malcolm-wallace-universe

./: .gitignore  .travis.yml  cabal.haskell-ci  cabal.project
.github/workflows/: ghcup.yml  haskell-ci.yml  haskell-setup.yml  mhs-ci.yml  setup-ghcup-stack.yml  stack-ghcup.yml  stack-no-global.yml  stack.yml
HaXml-1.25.4/: HaXml.cabal
HaXml-1.25.5/: Changelog.md  HaXml.cabal
HaXml-1.25.5/src/Text/XML/HaXml/: Version.hs
cpphs-1.20.8/: cpphs.cabal
cpphs-1.20.9/: cpphs.cabal  cpphs.hs
cpphs-1.20.9/Language/Preprocessor/Cpphs/: CppIfdef.hs  HashDefine.hs  MacroPass.hs  Options.hs  ReadFirst.hs  RunCpphs.hs  SymTab.hs  Tokenise.hs
cpphs-1.20.9/test/: Test.hs  Version.hs  VersionCommit.hs
hscolour-1.24.4/: HsColour.hs  hscolour.cabal
hscolour-1.24.4/Language/Haskell/: HsColour.hs
hscolour-1.24.4/Language/Haskell/HsColour/: ACSS.hs  ANSI.hs  Anchors.hs  CSS.hs  Classify.hs  ColourHighlight.hs  Colourise.hs  HTML.hs  InlineCSS.hs  LaTeX.hs  MIRC.hs  Options.hs  Output.hs  TTY.hs
polyparse-1.12/: Changelog.md  LICENCE-commercial  polyparse.cabal
polyparse-1.12/src/Text/: Parse.hs
polyparse-1.12/src/Text/Parse/: ByteString.hs
polyparse-1.12/src/Text/ParserCombinators/: HuttonMeijer.hs  HuttonMeijerWallace.hs
polyparse-1.12/src/Text/ParserCombinators/Poly/: Base.hs  ByteString.hs  ByteStringChar.hs  Lazy.hs  Lex.hs  Parser.hs  Plain.hs  Result.hs  State.hs  StateLazy.hs  StateParser.hs  StateText.hs  Text.hs
